[tool.poetry]
name = "analise-telemarketing"
version = "0.1.0"
description = ""
authors = ["Lucas-Brito-Dev <lucasbrito_dev@outlook.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.6.1"
plotly = "^6.0.1"
pandas = "^2.2.3"
numpy = "^2.2.5"
streamlit = "^1.45.0"
statsmodels = "^0.14.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
